--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_emotional_cues.tex
@@ -16,7 +16,7 @@ Expected to win and lost (upset loss)&                     &                    
                     &                     &                     &     (0.667)         \\
 \midrule Observations&      88,028         &      88,028         &      88,028         \\
 Region FE           &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         \\
 Weather Controls    &         yes         &         yes         &         yes         \\
 Holiday FE          &         yes         &         yes         &         yes         \\
 Interact FE         &         yes         &         yes         &         yes         \\
