--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_home_away.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_home_away.tex
@@ -7,7 +7,7 @@ Away game day       &                     &       0.325         \\
 \midrule Effect size [\%]&       21.22         &       21.97         \\
 Observations        &      61,172         &      61,172         \\
 Region FE           &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         \\
 Weather Controls    &         yes         &         yes         \\
 Holiday FE          &         yes         &         yes         \\
 Interact FE         &         yes         &         yes         \\
