--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_robust_delayed_unweighted.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_robust_delayed_unweighted.tex
@@ -3,7 +3,7 @@ Game day            &       2.677\sym{***}&       2.699\sym{***}&       5.342\sy
 \midrule Effect size [\%]&       21.50         &       21.67         &       42.90         \\
 Observations        &      88,028         &      87,928         &      88,028         \\
 Region FE           &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         \\
 Weather Controls    &         yes         &         yes         &         yes         \\
 Holiday FE          &         yes         &         yes         &         yes         \\
 Interact FE         &         yes         &         yes         &         yes         \\
