--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_crime_chars.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_crime_chars.tex
@@ -3,7 +3,7 @@ Game day            &       2.677\sym{***}&       2.817\sym{***}&       1.482\sy
 \midrule Effect size [\%]&       21.50         &       21.00         &       13.40         &       20.71         &       22.51         &       56.21         &       19.58         \\
 Observations        &      88,028         &      27,140         &      14,632         &      21,476         &      24,780         &      88,028         &      88,028         \\
 Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
