--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_subcat_victim_chars.tex
@@ -3,7 +3,7 @@ Game day            &       2.677\sym{***}&       0.245\sym{***}&       2.432\sy
 \midrule Effect size [\%]&       21.50         &        4.99         &       32.27         &       40.43         &        9.64         &        5.40         \\
 Observations        &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         &      88,028         \\
 Region FE           &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Weather Controls    &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Holiday FE          &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
 Interact FE         &         yes         &         yes         &         yes         &         yes         &         yes         &         yes         \\
