--- a/analysis/output/tables/reg_fe/assrate_fixed_effects_leads_lags.tex
+++ b/analysis/output/tables/reg_fe/assrate_fixed_effects_leads_lags.tex
@@ -7,7 +7,7 @@ Day before game     &       0.287         &       0.318         &       0.339   
 \midrule Effect size [\%]&       22.34         &       22.60         &       22.98         &       22.28         \\
 Observations        &      87,438         &      87,438         &      87,438         &      87,438         \\
 Region FE           &         yes         &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         &         yes         \\
 Weather Controls    &           -         &         yes         &         yes         &         yes         \\
 Holiday FE          &           -         &           -         &         yes         &         yes         \\
 Interact FE         &           -         &           -         &           -         &         yes         \\
