--- a/analysis/output/tables/reg_fe/assrate_neighbor_regions_fixed_effects.tex
+++ b/analysis/output/tables/reg_fe/assrate_neighbor_regions_fixed_effects.tex
@@ -3,7 +3,7 @@ Game day            &       0.144         &       0.153         &       0.170   
 \midrule Effect size [\%]&        2.58         &        2.74         &        3.04         &        3.75         \\
 Observations        &     960,848         &     960,848         &     960,848         &     960,848         \\
 Region FE           &         yes         &         yes         &         yes         &         yes         \\
-Time Fe             &         yes         &         yes         &         yes         &         yes         \\
+Date Fe             &         yes         &         yes         &         yes         &         yes         \\
 Weather Controls    &           -         &         yes         &         yes         &         yes         \\
 Holiday FE          &           -         &           -         &         yes         &         yes         \\
 Interact FE         &           -         &           -         &           -         &         yes         \\
